# HFTrainer

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
configs/_base_/: default_runtime.py
configs/classification/: vit_base_demo.py
configs/distillation/: dmd_demo.py
configs/gan/: gan_demo.py
configs/llm/: llama_lora_demo.py  llama_sft_demo.py
configs/motion/: prism_demo.py
configs/prism/: prism_1b_t2m_motionhub.py  prism_1b_tp2m_hq_t5xxl_256text_aug_1frame.py  prism_1b_tp2m_motionhub.py  prism_5b_tp2m_motionhub.py
configs/text2image/: sd15_demo.py
configs/text2video/: wan_demo.py
configs/vermo/: _base_vermo_pretrain_wavtokenizer.py  _base_vermo_sft_wavtokenizer.py  _base_vermo_t2m_m2t_wavtokenizer.py  vermo_pretrain_4k_llama1b_wavtokenizer.py  vermo_sft_4k_llama1b_wavtokenizer.py  vermo_smoke.py  vermo_t2m_m2t_4k_qwen0.6b_wavtokenizer.py
docs/: api_reference.md  architecture.md  comparison.md  distributed.md  experiment_dir.md  index.md  installation.md  lora.md  memory.md  quickstart.md  tasks.md
docs/design/: checkpoint.md  dataset.md  evaluation.md  hooks.md  index.md  model_bundle.md  multi_optimizer.md
docs/en/: api_reference.md  architecture.md  comparison.md  distributed.md  experiment_dir.md  index.md  installation.md  integration.md  lora.md  memory.md  quickstart.md  tasks.md
docs/zh-cn/: api_reference.md  architecture.md  comparison.md  index.md  (+8 more)
hftrainer/: __init__.py  registry.py
tests/: conftest.py
tools/: dist_train.sh  download_checkpoints.sh  download_demo_data.py  infer.py  train.py
(+185 files in other folders)
